# Matrix-Games

./: .gitignore  Auxiliaries.h  CMakeLists.txt  Matrix.h  README.md  makefile  test_partA_output
PartA/: Auxiliaries.cpp  Auxiliaries.h  IntMatrix.cpp  IntMatrix.h  partA_tester.cpp  partA_tests.cpp  test_partA.cpp
PartB/: Matrix.cpp  Matrix.h  partB_tester.cpp  test_partB.cpp  test_partB_output
PartC/: Auxiliaries.cpp  Auxiliaries.h  Character.cpp  Character.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Medic.cpp  Medic.h  PartCMatrix.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  partC_tester.cpp  test_partC.cpp  test_partC_output
